syntax = "proto3";

package pathfinding;
option csharp_namespace = "Pathfinding";

import "game.proto";

// Main request message
message PathfindingRequest {
    oneof payload {
        CalculatePathRequest path = 1;
        LineOfSightRequest los = 2;
        PhysicsInput step = 3;
        VMapHeightRequest vmap_height = 4;
        VMapLineOfSightRequest vmap_los = 5;
        CombinedLineOfSightRequest combined_los = 6;
        AreaInfoRequest area_info = 7;
        LiquidInfoRequest liquid_info = 8;
    }
}

// Main response message
message PathfindingResponse {
    oneof payload {
        CalculatePathResponse path = 1;
        LineOfSightResponse los = 2;
        PhysicsOutput step = 3;
        VMapHeightResponse vmap_height = 4;
        VMapLineOfSightResponse vmap_los = 5;
        CombinedLineOfSightResponse combined_los = 6;
        AreaInfoResponse area_info = 7;
        LiquidInfoResponse liquid_info = 8;
        Error error = 99;
    }
}

// Error message
message Error {
    string message = 1;
}

// Navigation mesh pathfinding
message CalculatePathRequest {
    uint32 map_id = 1;
    game.Position start = 2;
    game.Position end = 3;
    bool straight = 4;
}

message CalculatePathResponse {
    repeated game.Position corners = 1;
}

// Navigation mesh line of sight
message LineOfSightRequest {
    uint32 map_id = 1;
    game.Position from = 2;
    game.Position to = 3;
}

message LineOfSightResponse {
    bool in_los = 1;
}

// Physics system
message PhysicsInput {
    // Movement state
    uint32 movement_flags = 1;
    
    // Position & orientation
    float pos_x = 2;
    float pos_y = 3;
    float pos_z = 4;
    float facing = 5;
    
    // Transport
    uint64 transport_guid = 6;
    float transport_offset_x = 7;
    float transport_offset_y = 8;
    float transport_offset_z = 9;
    float transport_orientation = 10;
    
    // Swimming/flying
    float swim_pitch = 11;
    
    // Falling/jumping
    uint32 fall_time = 12;
    float jump_vertical_speed = 13;
    float jump_cos_angle = 14;
    float jump_sin_angle = 15;
    float jump_horizontal_speed = 16;
    
    // Spline
    float spline_elevation = 17;
    
    // Movement speeds
    float walk_speed = 18;
    float run_speed = 19;
    float run_back_speed = 20;
    float swim_speed = 21;
    float swim_back_speed = 22;
    
    // Current velocity
    float vel_x = 23;
    float vel_y = 24;
    float vel_z = 25;
    
    // Collision
    float radius = 26;
    float height = 27;
    float gravity = 28;
    
    // Context
    uint32 map_id = 29;
    float delta_time = 30;
}

message PhysicsOutput {
    // New position
    float new_pos_x = 1;
    float new_pos_y = 2;
    float new_pos_z = 3;
    
    // New velocity
    float new_vel_x = 4;
    float new_vel_y = 5;
    float new_vel_z = 6;
    
    // Updated state
    uint32 movement_flags = 7;
    float orientation = 8;
    float pitch = 9;
    
    // Status flags
    bool is_grounded = 10;
    bool is_swimming = 11;
    bool is_flying = 12;
    bool collided = 13;
    
    // Environment info
    float ground_z = 14;
    float liquid_z = 15;
    
    // Fall damage info
    float fall_distance = 16;
    float fall_time = 17;
    
    // Spline progress
    int32 current_spline_index = 18;
    float spline_progress = 19;
}

// VMAP height query
message VMapHeightRequest {
    uint32 map_id = 1;
    game.Position position = 2;
    float search_distance = 3;  // Default: 1000.0
}

message VMapHeightResponse {
    float height = 1;
}

// VMAP line of sight
message VMapLineOfSightRequest {
    uint32 map_id = 1;
    game.Position from = 2;
    game.Position to = 3;
    bool ignore_m2_models = 4;
}

message VMapLineOfSightResponse {
    bool in_los = 1;
}

// Combined line of sight (NavMesh + VMAP)
message CombinedLineOfSightRequest {
    uint32 map_id = 1;
    game.Position from = 2;
    game.Position to = 3;
}

message CombinedLineOfSightResponse {
    bool in_los = 1;
}

// Area information
message AreaInfoRequest {
    uint32 map_id = 1;
    game.Position position = 2;
}

message AreaInfoResponse {
    uint32 flags = 1;
    int32 adt_id = 2;
    int32 root_id = 3;
    int32 group_id = 4;
    float corrected_z = 5;
}

// Liquid information
message LiquidInfoRequest {
    uint32 map_id = 1;
    game.Position position = 2;
}

message LiquidInfoResponse {
    bool has_liquid = 1;
    float liquid_level = 2;
    float liquid_floor = 3;
}